# VAS_Voice-Analysis-System

./: 1.28.0  README.md  app.py  download_nltk_data.py  download_sample_audio.py  memotag.db  pyproject.toml  pyvenv.cfg  replit.nix  requirements.txt  run_app.bat  run_app.sh  run_diagnostics.bat  run_diagnostics.sh  start_app.py  sync-to-huggingface.yml  test_nltk.py  test_streamlit.py  test_system.py
Scripts/: activate  activate.bat  find-corrupt-whisper-files.py  numba  rrd2whisper.py  srt  srt-deduplicate  srt-fixed-timeshift  srt-linear-timeshift  srt-lines-matching  srt-mux  srt-normalise  srt-play  srt-process  update-storage-times.py  whisper-auto-resize.py  whisper-auto-update.py  whisper-create.py  whisper-diff.py  whisper-dump.py  whisper-fetch.py  whisper-fill.py  whisper-info.py  whisper-merge.py  whisper-resize.py  whisper-set-aggregation-method.py  whisper-set-xfilesfactor.py  whisper-update.py
attached_assets/: Pasted-Based-on-the-provided-project-description-I-ll-create-a-comprehensive-prompt-for-the-Replit-agent-t-1744600778676.txt  Pasted-LookupError-Resource-93mpu-1744602151946.txt
images/: cognitive_assessment_report (2).html
modules/: audio_preprocessing.py  database.py  feature_extraction.py  machine_learning.py  reporting.py  speech_to_text.py  visualization.py
utils/: helpers.py
