[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.49.0",
    "librosa>=0.11.0",
    "matplotlib>=3.10.1",
    "nltk>=3.9.1",
    "numpy>=2.2.4",
    "openai>=1.73.0",
    "pandas>=2.2.3",
    "psycopg2-binary>=2.9.10",
    "pydub>=0.25.1",
    "scikit-learn>=1.6.1",
    "scipy>=1.15.2",
    "seaborn>=0.13.2",
    "soundfile>=0.13.1",
    "sqlalchemy>=2.0.40",
    "streamlit>=1.44.1",
    "vosk>=0.3.45",
    "whisper>=1.1.10",
]
